# aoc-codspeed

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
benches/: benchmarks.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
