[package]
name = "aoc-codspeed"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "day8"
harness = false

[[bench]]
name = "day11"
harness = false

[[bin]]
name = "day10"
path = "src/bin/day10.rs"
bench = false

[[bin]]
name = "day11"
path = "src/bin/day11.rs"
bench = false

[[bin]]
name = "day12"
path = "src/bin/day12.rs"
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
memchr = "2.7.4"
rustc-hash = "2.1.0"

[dev-dependencies]
criterion = "0.5.1"
