[package]
name = "aoc-codspeed"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
memchr = "2.7.4"
rustc-hash = "2.1.0"

[dev-dependencies]
criterion = "0.5.1"

# benches

[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day7"
harness = false

[[bench]]
name = "day8"
harness = false

[[bench]]
name = "day9"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false

[[bench]]
name = "day13"
harness = false

[[bench]]
name = "day14"
harness = false

[[bench]]
name = "day15"
harness = false

# binaries

[[bin]]
name = "day10"
path = "src/bin/day10.rs"
bench = false

[[bin]]
name = "day11"
path = "src/bin/day11.rs"
bench = false

[[bin]]
name = "day12"
path = "src/bin/day12.rs"
bench = false

[[bin]]
name = "day13"
path = "src/bin/day13.rs"
bench = false

[[bin]]
name = "day14"
path = "src/bin/day14.rs"
bench = false

[[bin]]
name = "day11_lut"
path = "src/bin/day11_lut.rs"
bench = false

[[bin]]
name = "day14_lut"
path = "src/bin/day14_lut.rs"
bench = false
